# oppi

./: .gitignore  .npmignore  AGENTS.md  ATTRIBUTIONS.md  CHANGELOG.md  Cargo.toml  LICENSE  OPPi.code-workspace  README.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: native-shell.yml
.reference/: README.md  manifest.json
crates/oppi-agents/: Cargo.toml
crates/oppi-agents/src/: lib.rs
crates/oppi-core/: Cargo.toml
crates/oppi-core/src/: event_store.rs  goals.rs  lib.rs
crates/oppi-protocol/: Cargo.toml
crates/oppi-protocol/src/: lib.rs
crates/oppi-sandbox/: Cargo.toml
crates/oppi-sandbox/src/: lib.rs  windows_process.rs  windows_restricted.rs  windows_wfp.rs
crates/oppi-server/: Cargo.toml
crates/oppi-server/src/: main.rs
crates/oppi-shell/: Cargo.toml
crates/oppi-shell/src/: main.rs  tui.rs
crates/oppi-shell/src/ratatui_ui/: frames.rs  layout.rs  mod.rs  model.rs  snapshots.rs  terminal.rs  theme.rs
crates/oppi-shell/src/ratatui_ui/widgets/: dock_tray.rs  editor.rs  footer.rs  header.rs  mod.rs  overlay.rs  slash_palette.rs  tool_digest.rs  transcript.rs
crates/oppi-shell/tests/fixtures/ratatui/: README.md  frames-03-10.contract.snap  r1-r2-r3.contract.snap
crates/oppi-shell/tests/snapshots/: theme-palette.snap  ui-frame-110.snap  ui-frame-44.snap  ui-frame-72.snap
crates/oppi-tools/: Cargo.toml
crates/oppi-tools/src/: lib.rs
docs/github/workflows/: enforce-oppi-intake.yml
scripts/: plan50-audit.mjs  plan50-audit.test.mjs  plan50-capture-local-background.mjs  plan50-capture-local-terminal.mjs  plan50-evidence-verify.mjs  plan50-evidence-verify.test.mjs  plan50-test.mjs  plan50-write-evidence-manifest.mjs  plan50-write-evidence-manifest.test.mjs  setup-feedback-github.mjs  setup-references.mjs
systemprompts/: README.md  manifest.json
systemprompts/audit/: codebase-audit-system-append.md
systemprompts/backups/2026-04-27/: BACKUP.md  README.md  manifest.json
systemprompts/backups/2026-04-27/permissions/: auto-review-user-prompt.template.md
systemprompts/backups/2026-04-27/review/: codex-review-system-append.md
systemprompts/commands/: review-audit-user-prompts.md  review-user-prompts.md
systemprompts/experiments/: README.md
systemprompts/experiments/promptname_a/: README.md  image-gen-codex-native-adapter-instructions.md  main-system-append.md  oppi-feature-routing-system-append.md  permissions-auto-review-system.md  review-system-append.md
systemprompts/experiments/promptname_b/: README.md  image-gen-codex-native-adapter-instructions.md  main-system-append.md  oppi-feature-routing-system-append.md  permissions-auto-review-system.md  review-system-append.md
systemprompts/goals/: budget-limit.md  continuation.md
systemprompts/image-gen/: codex-native-adapter-instructions.md
systemprompts/main/: oppi-active-tool-snippets-and-guidelines.md  oppi-feature-routing-system-append.md  pi-default-system-prompt.template.md
systemprompts/memory/: distiller-user-prompt.md
systemprompts/permissions/: auto-review-system.md
