[package]
name = "oppi-core"
description = "In-memory runtime core for the OPPi Rust spine."
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
oppi-agents.workspace = true
oppi-protocol.workspace = true
oppi-sandbox.workspace = true
oppi-tools.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
base64.workspace = true
