[package]
name = "oppi-sandbox"
description = "Conservative sandbox and permission-policy primitives for OPPi."
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
oppi-protocol.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_NetworkManagement_WindowsFilteringPlatform",
  "Win32_Networking_WinSock",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_System_JobObjects",
  "Win32_System_Pipes",
  "Win32_System_Rpc",
  "Win32_System_StationsAndDesktops",
  "Win32_System_Threading",
] }
