[package]
name = "oppi-shell"
description = "Experimental native terminal shell client for the OPPi Rust runtime."
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
oppi-protocol.workspace = true
serde_json.workspace = true
ureq.workspace = true
base64.workspace = true
getrandom.workspace = true
ring.workspace = true
unicode-width.workspace = true
crossterm = "0.28"
ratatui = "0.29"
